--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   , "qs":               "= 0.5.0"
   , "jugglingdb":       "= 0.1.24-pre2"
   , "jugglingdb-cozy-adapter": ">= 0"
+  , "websocket" : "*"
   }
 , "devDependencies": 
   { "should":           "= 1.2.0"
